[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.dependencies]
cw2 = { version = "2.0.0" }
cosmwasm-std = { version = "2.1.0", features = [
    "abort",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
    "iterator",
    "stargate",
] }
cw-storage-plus = { version = "2.0.0" }
injective-cosmwasm = { version = "0.3.1" }
injective-std = { version = "1.13.2-auction" }
schemars = { version = "0.8.16" }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.56" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
