[workspace]
members = [ "contracts/*", "packages/*" ]
resolver = "2"

[workspace.dependencies]
cosmwasm-schema = { version = "=2.1.4" }
cosmwasm-std = { version = "=2.1.0", features = [
    "abort",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
    "iterator",
    "stargate",
] }
cw-ownable = { version = "=2.0.0" }
cw-storage-plus = { version = "=2.0.0" }
cw2 = { version = "=2.0.0" }
injective-cosmwasm = { version = "=0.3.1" }
injective-std = { version = "=1.13.2-auction" }
injective-std-derive = { version = "=1.13.0" }
# injective-test-tube = { version = "=1.13.2" }
injective-math = { version = "0.3.0" }
injective-test-tube = { package = "injective-test-tube", git = "https://github.com/auction-dao/injective-test-tube.git", branch = "auction-dao" }
prost = { version = "0.12.6" }
prost-types = { version = "0.12.6", default-features = false }
schemars = { version = "=0.8.16" }
serde = { version = "=1.0.196", default-features = false, features = [
    "derive",
] }
thiserror = { version = "=1.0.56" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
